doc: add documentation swagger
